Testing SEO updates.

--- a/_sass/_layout.scss
+++ b/_sass/_layout.scss
@@ -7,3 +7,7 @@
   width: -webkit-calc(65% - (#{$spacing-unit} / 2));
   width:         calc(65% - (#{$spacing-unit} / 2));
 }
+.main_logo {
+  height: 30px;
+  width: 30px;
+}
