Fixing SEO, adding Favicon, and updating CSS to actually load logo.

--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,7 +1,7 @@
 <header class="site-header" role="banner">
 
   <div class="wrapper">
-    <img class="main_logo" href="/assets/drupaldiversity_logo_300.png" />
+    <img class="main_logo" src="/assets/drupaldiversity_logo_300.png" alt="Drupal Diversity Logo">
     <a class="site-title" href="{{ "/" | relative_url}}">{{ site.title | escape }}</a>
 
     <nav class="site-nav">
