Adding SiteMap and Email Address.

--- a/_includes/head.html
+++ b/_includes/head.html
@@ -24,6 +24,7 @@
   <meta name="msapplication-TileColor" content="#ffffff">
   <meta name="msapplication-TileImage" content="/ms-icon-144x144.png">
   <meta name="theme-color" content="#ffffff">
+  <meta name="contact" content="drupaldiversity@gmail.com" />
 
   {% seo %}
 
