Adding Newsletter Subscription.

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -19,9 +19,8 @@
         </ul>
       </div>
 
-
-      <div class="footer-col footer-col-3">
-        <p>{{ site.description | escape }}</p>
+      <div class="footer-col footer-col-2">
+        {% include mailchimp.html %}
       </div>
     </div>
 
