--- a/_sass/_layout.scss
+++ b/_sass/_layout.scss
@@ -13,14 +13,25 @@
   width:         calc(65% - (#{$spacing-unit} / 2));
   display: inline-block;
 }
+.wrapper-col-1 {
+  width: -webkit-calc(66.667% - (#{$spacing-unit} / 2));
+  width:         calc(66.667% - (#{$spacing-unit} / 2));
+  float: left;
+}
+.wrapper-col-2 {
+  width: -webkit-calc(33.334% - (#{$spacing-unit} / 2));
+  width:         calc(33.334% - (#{$spacing-unit} / 2));
+  float: left;
+  margin: 10% 0;
+}
 .footer-col-1 {
-  width: -webkit-calc(35% - (#{$spacing-unit} / 2));
-  width:         calc(35% - (#{$spacing-unit} / 2));
+  width: -webkit-calc(33.334% - (#{$spacing-unit} / 2));
+  width:         calc(33.334% - (#{$spacing-unit} / 2));
 }
 
 .footer-col-2 {
-  width: -webkit-calc(65% - (#{$spacing-unit} / 2));
-  width:         calc(65% - (#{$spacing-unit} / 2));
+  width: -webkit-calc(66.667% - (#{$spacing-unit} / 2));
+  width:         calc(66.667% - (#{$spacing-unit} / 2));
 }
 .main_logo {
   margin: auto;
@@ -35,5 +46,17 @@
     color: $grey-color-mid;
     border-bottom: none;
     text-decoration: none;
+  }
+}
+#mc_embed_signup {
+  background:#fff;
+  clear:left;
+  .button {
+    background-color: #2a7ae2;
+    margin: 0 40%;
+    font: 1.35em Helvetica,Arial,sans-serif;
+    &:hover {
+      background-color: #1756a9
+    }
   }
 }
