UI/UX recommended changes.

--- a/_includes/mailchimp.html
+++ b/_includes/mailchimp.html
@@ -4,18 +4,26 @@
     <div id="mc_embed_signup_scroll">
 	<h2>Subscribe to our mailing list</h2>
 <div class="indicates-required"><span class="asterisk">*</span> indicates required</div>
-<div class="mc-field-group">
-	<label for="mce-EMAIL">Email Address  <span class="asterisk">*</span>
-</label>
-	<input type="email" value="" name="EMAIL" class="required email" id="mce-EMAIL">
-</div>
-<div class="mc-field-group">
-	<label for="mce-FNAME">First Name </label>
-	<input type="text" value="" name="FNAME" class="" id="mce-FNAME">
-</div>
-<div class="mc-field-group">
-	<label for="mce-LNAME">Last Name </label>
-	<input type="text" value="" name="LNAME" class="" id="mce-LNAME">
+<div class="row">
+  <div class="column small-12 large-6">
+    <div class="mc-field-group">
+    	<label for="mce-FNAME">First Name or given name</label>
+    	<input type="text" value="" name="FNAME" class="" id="mce-FNAME">
+    </div>
+  </div>
+  <div class="column small-12 large-6">
+    <div class="mc-field-group">
+    	<label for="mce-LNAME">Last Name or surname</label>
+    	<input type="text" value="" name="LNAME" class="" id="mce-LNAME">
+    </div>
+  </div>
+  <div class="column small-12 large-12">
+    <div class="mc-field-group">
+    	<label for="mce-EMAIL">Email Address  <span class="asterisk">*</span>
+    </label>
+    	<input type="email" value="" name="EMAIL" class="required email" id="mce-EMAIL">
+    </div>
+  </div>
 </div>
 	<div id="mce-responses" class="clear">
 		<div class="response" id="mce-error-response" style="display:none"></div>
