--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -16,6 +16,10 @@
             {% include icon-twitter.html username=site.twitter_username %}
           </li>
           {% endif %}
+
+          {% if site.twitter_username %}
+            {% twitter {{ site.twitter }} maxwidth=216 limit=5 %}
+          {% endif %}
         </ul>
       </div>
 
