--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -22,13 +22,14 @@ layout: default
 
 
     <p class="rss-subscribe">subscribe <a href="{{ "/feed.xml" | relative_url }}">via RSS</a></p>
+    <p class="site-description">{{ site.description | escape }}</p>
+
   </div>
 
   <div class="wrapper-col-2">
-    <p>{{ site.description | escape }}</p>
 
     {% if site.twitter_username %}
-    {% twitter https://twitter.com/drupaldiversity maxwidth=325 height=400 limit=2 hide_media=true %}
+      {% twitter https://twitter.com/drupaldiversity maxwidth=325 height=400 limit=2 hide_media=true %}
     {% endif %}
   </div>
 
