Adding Twitter embed, as jekyll-twitter-plugin does not work on GitHub Pages.

--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -29,7 +29,7 @@ layout: default
   <div class="wrapper-col-2">
 
     {% if site.twitter_username %}
-      {% twitter https://twitter.com/drupaldiversity maxwidth=325 height=400 limit=2 hide_media=true %}
+      <a class="twitter-timeline" data-height="500" href="https://twitter.com/drupaldiversity">Tweets by drupaldiversity</a> <script async src="//platform.twitter.com/widgets.js" charset="utf-8"></script>
     {% endif %}
   </div>
 
