Tweaking color of Subscribe button and background-text color to match Logo, as per @cottser’s report of the HEX-Color.

--- a/_sass/_layout.scss
+++ b/_sass/_layout.scss
@@ -126,7 +126,7 @@
     width: 100%;
   }
   .button {
-    background-color: #39b5f1;
+    background-color: #39B5F2;
     margin: 0 40%;
     font: 1.35em Helvetica,Arial,sans-serif;
     &:hover {
@@ -138,7 +138,7 @@
   font-size: 1.25em;
   font-weight: 500;
   border-radius: 5px;
-  background-color: #39b5f1;
+  background-color: #39B5F2;
   padding: 3%;
   text-align: center;
 }
