--- a/_sass/_layout.scss
+++ b/_sass/_layout.scss
@@ -98,7 +98,7 @@
     width: 100%;
   }
   .button {
-    background-color: #2a7ae2;
+    background-color: #42B6F0;
     margin: 0 40%;
     font: 1.35em Helvetica,Arial,sans-serif;
     &:hover {
