--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -16,6 +16,14 @@
             {% include icon-twitter.html username=site.twitter_username %}
           </li>
           {% endif %}
+          <li>
+            <div class="feedback large-12">
+              <hr />
+              <br>
+              <p>Please help increase BSDM / Kink inclusiveness in the DD&I Workgroup:</p>
+              <a class="button large-6" href="https://docs.google.com/forms/d/15PeJeOqRXi5N9Mt5R5Z2Bk-c-TV7qektYWpBkcmO8TQ/viewform?edit_requested=true">Submit Feedback</a>
+            </div>
+          </li>
         </ul>
       </div>
 
