Tweaking feedback form to be more generalized and open for ALL.

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -20,8 +20,8 @@
             <div class="feedback large-12">
               <hr />
               <br>
-              <p>Please help increase BSDM / Kink inclusiveness in the DD&I Workgroup:</p>
-              <a class="button large-6" href="https://docs.google.com/forms/d/15PeJeOqRXi5N9Mt5R5Z2Bk-c-TV7qektYWpBkcmO8TQ/viewform?edit_requested=true">Submit Feedback</a>
+              <p>Please help us increase our own inclusiveness and awareness. If you have feedback for us about anything, you can share it anonymously here:</p>
+              <a class="button large-6" href="http://goo.gl/dUVq2J">Submit Feedback</a>
             </div>
           </li>
         </ul>
