--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,37 +1,38 @@
 <footer class="site-footer">
-
-  <div class="wrapper">
-
-    <div class="footer-col-wrapper">
-      <div class="footer-col footer-col-1">
-        <ul class="social-media-list">
-          {% if site.github_username %}
-          <li>
-            {% include icon-github.html username=site.github_username %}
-          </li>
-          {% endif %}
-
-          {% if site.twitter_username %}
-          <li>
-            {% include icon-twitter.html username=site.twitter_username %}
-          </li>
-          {% endif %}
-          <li>
-            <div class="feedback large-12">
-              <hr />
-              <br>
-              <p>Please help increase BSDM / Kink inclusiveness in the DD&I Workgroup:</p>
-              <a class="button large-6" href="https://docs.google.com/forms/d/15PeJeOqRXi5N9Mt5R5Z2Bk-c-TV7qektYWpBkcmO8TQ/viewform?edit_requested=true">Submit Feedback</a>
-            </div>
-          </li>
-        </ul>
+  
+    <div class="wrapper">
+  
+      <div class="footer-col-wrapper">
+        <div class="footer-col footer-col-1">
+          <ul class="social-media-list">
+            {% if site.github_username %}
+            <li>
+              {% include icon-github.html username=site.github_username %}
+            </li>
+            {% endif %}
+  
+            {% if site.twitter_username %}
+            <li>
+              {% include icon-twitter.html username=site.twitter_username %}
+            </li>
+            {% endif %}
+            <li>
+              <div class="feedback large-12">
+                <hr />
+                <br>
+                <p>Please help us increase our own inclusiveness and awareness. If you have feedback for us about anything, you can share it anonymously here:</p>
+                <a class="button large-6" href="http://goo.gl/dUVq2J">Submit Feedback</a>
+              </div>
+            </li>
+          </ul>
+        </div>
+  
+        <div class="footer-col footer-col-2">
+          {% include mailchimp.html %}
+        </div>
       </div>
-
-      <div class="footer-col footer-col-2">
-        {% include mailchimp.html %}
-      </div>
+  
     </div>
-
-  </div>
-
-</footer>
+  
+  </footer>
+  
